// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the languages without the ones in the facet 1`] = `
<div
  className="search-navigator-facet-footer projects-facet-footer"
>
  <Select
    addLabelText="Add \\"{label}\\"?"
    arrowRenderer={[Function]}
    autosize={true}
    backspaceRemoves={true}
    backspaceToRemoveMessage="Press backspace to remove {label}"
    className="input-super-large"
    clearAllText="Clear all"
    clearValueText="Clear value"
    clearable={false}
    delimiter=","
    disabled={false}
    escapeClearsValue={true}
    filterOptions={[Function]}
    ignoreAccents={true}
    ignoreCase={true}
    inputProps={Object {}}
    isLoading={false}
    joinValues={false}
    labelKey="label"
    matchPos="any"
    matchProp="any"
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    noResultsText="No results found"
    onBlurResetsInput={true}
    onChange={[Function]}
    onCloseResetsInput={true}
    openAfterFocus={false}
    optionComponent={[Function]}
    options={
      Array [
        Object {
          "label": "Flex",
          "value": "flex",
        },
        Object {
          "label": "PHP",
          "value": "php",
        },
        Object {
          "label": "Python",
          "value": "py",
        },
      ]
    }
    pageSize={5}
    placeholder="search_verb"
    required={false}
    scrollMenuIntoView={true}
    searchable={true}
    simpleValue={false}
    tabSelectsValue={true}
    valueComponent={[Function]}
    valueKey="value"
  />
</div>
`;

exports[`should render the tags without the ones in the facet 1`] = `
<div
  className="search-navigator-facet-footer projects-facet-footer"
>
  <Select
    addLabelText="Add \\"{label}\\"?"
    arrowRenderer={[Function]}
    autosize={true}
    backspaceRemoves={true}
    backspaceToRemoveMessage="Press backspace to remove {label}"
    className="input-super-large"
    clearAllText="Clear all"
    clearValueText="Clear value"
    clearable={false}
    delimiter=","
    disabled={false}
    escapeClearsValue={true}
    filterOptions={[Function]}
    ignoreAccents={true}
    ignoreCase={true}
    inputProps={Object {}}
    isLoading={false}
    joinValues={false}
    labelKey="label"
    matchPos="any"
    matchProp="any"
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    noResultsText="No results found"
    onBlurResetsInput={true}
    onChange={[Function]}
    onCloseResetsInput={true}
    openAfterFocus={false}
    optionComponent={[Function]}
    options={
      Array [
        Object {
          "label": "lang",
          "value": "lang",
        },
        Object {
          "label": "sonar",
          "value": "sonar",
        },
        Object {
          "label": "csharp",
          "value": "csharp",
        },
      ]
    }
    pageSize={5}
    placeholder="search_verb"
    required={false}
    scrollMenuIntoView={true}
    searchable={true}
    simpleValue={false}
    tabSelectsValue={true}
    valueComponent={[Function]}
    valueKey="value"
  />
</div>
`;
